src/objects/appsolutely__Error_Log__c.object
<CustomObject>
    <description>Logs errors fired throughout the application. Purely to ease the maintenance. No access needed for users of the app or admins.</description>
    <fields>
        <fullName>appsolutely__Cause__c</fullName>
        <description>The cause of the error</description>
        <inlineHelpText>The cause of the error</inlineHelpText>
        <label>Cause</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>appsolutely__Error_Email_Address__c</fullName>
        <defaultValue>$CustomMetadata.01I1l0000001Biv.m0l1l0000004CQB.00N1l000001aLxw</defaultValue>
        <label>Error Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>appsolutely__Line_Number__c</fullName>
        <description>The line number the error occurred on.</description>
        <inlineHelpText>The line number the error occurred on.</inlineHelpText>
        <label>Line Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Message__c</fullName>
        <description>The message logged. Message of the exception if an exception has been logged.</description>
        <inlineHelpText>The message logged</inlineHelpText>
        <label>Message</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>appsolutely__Send_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set in the handleAfterEventInsert method to true if an email needs to be send to the support email address configured in the Setting error email. If checked the after insert trigger on Error Log itself will send an email to the support email address. See https://salesforce.stackexchange.com/questions/221708/does-messaging-sendemail-not-work-in-a-platform-event-trigger-context</description>
        <label>Send Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>appsolutely__Stacktrace__c</fullName>
        <description>The stacktrace&apos; exception to log</description>
        <inlineHelpText>The stacktrace&apos; exception to log</inlineHelpText>
        <label>Stacktrace</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>appsolutely__Type__c</fullName>
        <description>The exception type</description>
        <inlineHelpText>The exception type</inlineHelpText>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Error Log</label>
    <listViews>
        <fullName>appsolutely__All</fullName>
        <columns>NAME</columns>
        <columns>appsolutely__Message__c</columns>
        <columns>appsolutely__Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>EL-{00000000}</displayFormat>
        <label>Error Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>